# libsais-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
libsais-sys/: Cargo.toml  build.rs
src/: lib.rs
