[package]
name = "libsais-rs"
version = "0.1.0"
edition = "2021"
include = ["src/**/*", "LICENSE.md", "README.md", "CHANGELOG.md"]

[dependencies]

[dev-dependencies]
rand = "*"

[build-dependencies]
bindgen = "*"
cmake = "0.1.50"

[features]
# Enable the openmp parallelized features.
openmp = []
default = ['openmp']
